# DAI_Autonomous_Vehicles

./: main.py  pyproject.toml  readme.md
Machine_Vision/: Car_Detection.py  Lane_detection.py  Lane_detection_multiclass.py  Lidar_display.py  data.yaml  lane_post_processing.py  object_detection_training.py  run_detection.py  traffic_sign_comprehension.py  traffic_sign_comprehension_v2.ckpt  train_vehicle_idtentification.ipynb
RL/: ACNetwork.py  DrivingPPOAgent.py  Model1.py  carlaEnvironment.py  carlaPyroServer.py  carla_env.py  carla_environment.py  carla_remote_env.py  carla_server.py  env_utils.py  evaluate.py  main.py  model1.ipynb  steering_agent.py  train.py  waypoints.py  waypoints_utils.py
RL/PPO/: ACNetwork.py  DrivingPPOAgent.py
RL/environment/: action_utils.py  carla_logger.py  env.py  envs_manager.py  observation_utils.py
RL/openai_baseline/: logger.py
agents/navigation/: basic_agent.py  behavior_agent.py  constant_velocity_agent.py  global_route_planner.py  local_planner.py
agents/tools/: misc.py
jupyter_notebooks/: LiDAR-Object-Detection.ipynb  Machine_Vision_Demo.ipynb  Yolo11_training.ipynb  car_tracking.ipynb  example_jupyter_notebook.ipynb  pointcloud.py  pointcloud_detection.ipynb  speed_sign_detection.ipynb  traffic_sign_cnn.ipynb
lane_detection/: LaneDetector.py
runtime/: CarlaWrapper.py  Distance.py  TestDistance.py  docker-compose.yaml  kitti_dataset_generation.py  main.py  pyro_state.py  readme.md
simulation/Model/: model.py  (+5 more)
test/: test_carla_shared_memory_buffer.py  test_shared_memory_utils.py
visualization/: MinimalHUD.py
(+63 files in other folders)
